--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "npx playwright test",
+    "report": "npx playwright show-report"
+  },
   "keywords": [],
-  "author": "",
+  "author": "Karen Douglas",
   "license": "ISC",
   "dependencies": {
     "@axe-core/playwright": "^4.9.1",
